# sklearn_onnx_deployment

./: CMakeLists.txt
model/: pipeline_rf.onnx
onnx_inference/: CMakeLists.txt  main.cpp  main.h
sklearn2onnx/: run.py
